--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,57 +8,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapsActivity">
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="60dp"
         android:layout_gravity="bottom|center">
-
-        <Button
-            android:id="@+id/parkmycar"
-            style="@style/Widget.AppCompat.Button"
+        <LinearLayout
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center">
+
+            <Button
+                android:id="@+id/parkmycar"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.80"
+                android:padding="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/park_my_car"
+                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:typeface="serif"
+                android:onClick="startParkMyCar"/>
+
+            <Button
+                android:id="@+id/findparking"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.80"
+                android:padding="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/find_parking"
+                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:typeface="serif"
+                android:onClick="startFindingIntent"/>
+
+            <Button
+                android:id="@+id/findycar"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.80"
+                android:padding="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/find_my_car"
+                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:typeface="serif"
+                android:onClick="startFindMyCar"/>
+        </LinearLayout>
+        <Button
+            android:id="@+id/refresh"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.80"
             android:padding="10dp"
             android:paddingRight="10dp"
-            android:text="@string/park_my_car"
+            android:text="@string/refresh"
             android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:typeface="serif"
-            android:onClick="startParkMyCar"/>
-
-        <Button
-            android:id="@+id/findparking"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.80"
-            android:padding="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/find_parking"
-            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:typeface="serif"
-            android:onClick="startFindingIntent"/>
-
-        <Button
-            android:id="@+id/findycar"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.80"
-            android:padding="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/find_my_car"
-            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:typeface="serif"
-            android:onClick="startFindMyCar"/>
+            android:onClick="refreshData"/>
     </LinearLayout>
+
 
 </fragment>
