--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAVOiI_tlj4I7sN3_zAiB_Ye_Z_VRIZq8A</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB06O8huKehCEFepOD2VP-WhzEiWzWyPAk  <!--AIzaSyAVOiI_tlj4I7sN3_zAiB_Ye_Z_VRIZq8A--></string>
 </resources>
